--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,12 +2,13 @@
 <html>
 <head>
   <title>Shnack</title>
+  <link rel="shortcut icon" type="image/ico" href="images/favicon.ico">
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<%= image_tag "shnack_with_text.png", :class => "logo"  %>
 <%= yield %>
 
 </body>
