--- a/app/views/application/select_stadium.html.erb
+++ b/app/views/application/select_stadium.html.erb
@@ -1,5 +1,4 @@
-<ul>
-	<% @stadiums.each do |stadium| %>
-		<li> <%= stadium.name %> </li>
-	<% end %>
-</ul>
+<h1> Welcome to Shnack! </h1>
+
+<%= link_to "Go To The Stadiums Page", stadia_path %> 
+
