--- a/app/assets/stylesheets/vendors.css.scss
+++ b/app/assets/stylesheets/vendors.css.scss
@@ -7,7 +7,7 @@
   margin:0
 }
 dl {
- width:200px;
+ width:225px;
  overflow:hidden;
 }
 dt {
@@ -19,4 +19,8 @@ dt {
 dd {
  float:left;
  width:25%; /* adjust the width; make sure the total of both is 100% */
+}
+
+.item_form {
+	padding-top:10px;
 }
