added create stadium link

--- a/app/views/stadia/index.html.erb
+++ b/app/views/stadia/index.html.erb
@@ -6,3 +6,6 @@
 			<%= link_to "Delete", stadium, :method => :delete %> </li>
 	<% end %>
 </ul>
+<br />
+
+<%= link_to "Create new stadium", new_stadium_path %>
