added user login

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,10 @@
 </head>
 <body>
 <%= image_tag "shnack_with_text.png", :class => "logo"  %>
+<p class="notice"><%= notice %></p>
+<p class="alert"><%= alert %></p>
+
+
 <%= yield %>
 
 </body>
