--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,21 +8,22 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<%= image_tag "shnack_with_text.png", :class => "logo"  %>
-
-<% if user_signed_in? %>
-  <li>
-  <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>   
+<div class="nav"> 
+  <%= image_tag "shnack_with_text.png", :class => "logo"  %>
+  <ul>
+  <% if user_signed_in? %>
+    <li>
+      <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>   
+    <li>   
+      <%= link_to "Change your password", edit_user_registration_path %>
     </li>
-<li>   
-  <%= link_to "Change your password", edit_user_registration_path %>
-</li>
-<% else %>
-  <li>
-  <%= link_to('Login', new_user_session_path)  %>  
-  </li>
-<% end %>
-
+  <% else %>
+    <li>
+    <%= link_to('Login', new_user_session_path)  %>  
+    </li>
+  <% end %>
+  </ul>
+</div>
 <p class="notice"><%= notice %></p>
 <p class="alert"><%= alert %></p>
 
