--- a/app/views/application/select_stadium.html.erb
+++ b/app/views/application/select_stadium.html.erb
@@ -1,4 +1,10 @@
 <h1> Welcome to Shnack! </h1>
 
-<%= link_to "Go To The Stadiums Page", stadia_path %> 
+
+<h2>Select your stadium:</h2>
+<ul>
+	<% @stadiums.each do |stadium| %>
+		<li> <%= link_to stadium.name, :action => "select_vendor", :object_id  => stadium.id %> </li>
+	<% end %>
+</ul>
 
