--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
     <li>
       <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>   
     <li>   
-      <%= link_to "Change your password", edit_user_registration_path %>
+      <%= link_to "Change your password", :controller => "users", :action => "edit", :id => current_user.id %>
     </li>
   <% else %>
     <li>
