rudimentary order system in place

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -24,6 +24,11 @@ body {
 	font-family: 'Poiret One';		
 	background-color: #F0F0F0;
 }
+
+.hidden {
+	display: none;
+}
+
 .top_bar {
 	height:30px;
 }
