--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,3 +1,5 @@
+<h1> Edit <%= @user.email %> </h1>
+
 <%= form_for(@user, :url => { :action => "update" } ) do |f| %>
   <div class="field">
     <%= f.label :password, "Password" %><br />
