--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,5 +1,6 @@
 <p id="notice"><%= notice %></p>
-<%= @order.id %>
+<h1> Order for <%= @order.vendor.name %> </h1>
+<h2> #<%= @order.id %> </h2>
 
 	<table class="order_details">
 		<thead>
