--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class="nav"> 
-  <%= image_tag "shnack_with_text.png", :class => "logo"  %>
+  <%= link_to image_tag("shnack_with_text.png", :class => "logo"), root_path  %>
   <ul>
   <% if user_signed_in? %>
     <li> <%= current_user.email %> </li>
@@ -17,7 +17,8 @@
       <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>   
     </li>
     <li>   
-      <%= link_to "Change your password", :controller => "users", :action => "edit", :id => current_user.id %>
+      <%=link_to "Edit Profile", :controller => "users", :action => "edit", :id => current_user.id %>
+      
     </li>
   <% else %>
     <li>
