--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -12,6 +12,7 @@
 
   <% end %>
   <% if user_signed_in? %>
+    E-mail: <%= current_user.email %>
     <%= f.hidden_field :user_id, :value => current_user.id %>
   <% else %>
 
