added manage section

--- a/app/views/shnack/index.html.erb
+++ b/app/views/shnack/index.html.erb
@@ -1,3 +1,5 @@
+<h3><%= "Welcome #{current_user.first_name} #{current_user.last_name}" %> </h3>
+
 Thanks for checking out Shnack!<br />
 Functionality coming soon! <br />
 
