--- a/app/views/stadia/show.html.erb
+++ b/app/views/stadia/show.html.erb
@@ -6,4 +6,6 @@
 	<% end %>
 </ul>
 <br />
+
+<%= link_to "Add a vendor", new_stadium_vendor_path(@stadium) %> <br />
 <%= link_to "Back to stadiums list", stadia_path %>
