--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -6,7 +6,7 @@
 			<td> Item </td>
 			<td> Qty </td>
 			<td> Price </td>
-			<td> Total </td>
+			<td> Totalllll </td>
 		</thead>
 		<% @order_details.each_pair do |id, qty| %>
 		<tr>
