--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,20 +14,51 @@
 @import url(http://fonts.googleapis.com/css?family=Poiret+One);
 @import url(http://fonts.googleapis.com/css?family=Damion);
  
-.nav {
-	float:right;
-}
- 
+
 body {
 	padding: 25px;
 	color: #a61c00;
-	font-family: 'Poiret One';		
-	background-color: #F0F0F0;
+	font-family: "Poiret One", Arial;
+	background: #252525;
 }
 
-.hidden {
-	display: none;
+#nav {
+	height: 200px;
 }
+
+ul#nav {
+	color: red;
+	list-style-type: none;
+	font-size: 16px;
+}
+
+ul#nav li {
+	//padding-top: 15px;
+}
+
+#main-content {
+	margin: 0px auto;
+	width: 700px;
+}
+
+#order-form {
+	width: 430px;
+	height: 400px;
+	background: whitesmoke;
+	padding: 20px;
+	box-shadow: 0px 0px 15px darkgray;
+  	-webkit-border-radius: 20px;
+    -webkit-border-radius: 20px;
+}
+
+#side-bar {
+	float: right;	
+	width: 220px;
+	height: 700px;
+	padding: 10px;
+}
+
+
 
 .top_bar {
 	height:30px;
@@ -39,6 +70,7 @@ body {
  
 }
 
+
 #logo, .logo {
 	width: 200px;
 	float:right;
@@ -46,4 +78,45 @@ body {
  
 h1,h2,h3 {
 	padding-bottom: 10px;
+}
+
+ul.general-list {
+	list-style-type: none;
+	margin-left: -10px;
+}
+
+ul.general-list li {
+	text-decoration: none;
+	line-height: 30px;
+	font-size: 22px;
+}
+
+ul.general-list li a {
+	text-decoration: none;
+}
+
+ul.general-list li a:hover {
+	color: #a61c00;
+}
+
+.headline {
+	font-family: "Poiret One", Arial;
+}
+
+h1.headline {
+	color: #a61c00;
+	margin-top: 15px;
+	font-size: 36px;
+}
+
+h2.headline {
+	margin-top: 10px;
+	font-size: 24px;
+	//text-transform: uppercase;
+	font-weight: 900;
+}
+
+h3.headline {
+	font-size: 16px;
+
 }
