--- a/app/views/application/select_vendor.html.erb
+++ b/app/views/application/select_vendor.html.erb
@@ -1,10 +1,10 @@
-<h1> <%= @stadium.name %> </h1>
+<h1 class="headline"> <%= @stadium.name %> </h1>
 
 
-<h2>Select your vendor:</h2>
-<ul>
+<h2 class="headline">Select your vendor:</h2>
+<ul class="general-list">
 	<% @stadium.vendors.each do |vendor| %>
-		<li> <%= link_to vendor.name, new_order_path(:vendor_id  => vendor.id) %> </li>
+		<li class="general-list"> <%= link_to vendor.name, new_order_path(:vendor_id  => vendor.id) %> </li>
 	<% end %>
 </ul>
 <br />
