added order states, have the ability to get open orders

--- a/app/views/layouts/charges.html.erb
+++ b/app/views/layouts/charges.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Shnack</title>
-  <link rel="shortcut icon" type="image/ico" href="images/favicon.ico">
+  <link rel="shortcut icon" type="image/ico" href="assets/images/favicon.ico">
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
