--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -21,4 +21,4 @@
 	</table>
 
 
-Your Order is currently <%= @order.order_states.first.state_text %>
+Your Order is currently <%= @order.current_order_state.state_text %>
