--- a/app/views/charges/new.html.erb
+++ b/app/views/charges/new.html.erb
@@ -27,6 +27,6 @@
 
   <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
           data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
-          data-description="A month's subscription"
+          data-description="Pay For Your Order"
           data-amount="<%= @order.amount %>"></script>
 <% end %>
