--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
-<%= @order.id %>
+<h4 class="text-center"> # <%= @order.id %> </h4>
 
-	<table class="order_details">
+	<table class="table">
 		<thead>
 			<td> Item </td>
 			<td> Qty </td>
