--- a/app/views/application/select_stadium.html.erb
+++ b/app/views/application/select_stadium.html.erb
@@ -1,11 +1,6 @@
-<h1 class="headline"> Welcome to Shnack! </h1>
-<p>This is the official order page.</p>
-</br>
-
 <h2 class="headline">Select your stadium:</h2>
-<ul class="general-list">
+<div class="list-group">
 	<% @stadiums.each do |stadium| %>
-		<li class="general-list"> <%= link_to stadium.name, :action => "select_vendor", :object_id  => stadium.id %> </li>
+		<%= link_to stadium.name, {:action => "select_vendor", :object_id  => stadium.id},:class=>"list-group-item"  %> 
 	<% end %>
-</ul>
 
