--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,4 +1,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Back', :controller => 'application' , :action => "select_vendor", :object_id  => @stadium.id %>
+<%= link_to 'Cancel', :controller => 'application' , :action => "select_vendor", :object_id  => @stadium.id %>
