--- a/app/views/application/select_stadium.html.erb
+++ b/app/views/application/select_stadium.html.erb
@@ -1,6 +1,6 @@
-<h2 class="headline">Select your stadium:</h2>
+<h2 class="headline">Select your Location:</h2>
 <div class="list-group">
-	<% @stadiums.each do |stadium| %>
-		<%= link_to stadium.name, {:action => "select_vendor", :object_id  => stadium.id},:class=>"list-group-item"  %> 
+	<% @locations.each do |location| %>
+		<%= link_to location.name, {:action => "select_vendor", :object_id  => location.id},:class=>"list-group-item"  %> 
 	<% end %>
 
