--- a/app/views/charges/new.html.erb
+++ b/app/views/charges/new.html.erb
@@ -25,12 +25,17 @@
 			<td> <%= integer_to_currency(@order.amount) %> </td>
 		</tfoot>
 
-
 	</table>
 
+	<%= telephone_field(:user, :phone, :class => "form-control",:id => "order-phone-number", :placeholder => "Phone #") %> 
+	<br />
+ 
+
 	<div class="text-center">
-  <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+  <script src="https://checkout.stripe.com/checkout.js"  class="stripe-button"
           data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
+          data-name="Shnack"
+          data-label="Pay For Your Order"
           data-description="Pay For Your Order"
           data-amount="<%= @order.amount %>"></script>
       </div>
