--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -20,5 +20,4 @@
 
 	</table>
 
-
-Your Order is currently <%= @order.current_order_state.state_text %>
+<h5 class="text-center"> Currently <%= @order.current_order_state.state_text %> </h5>
