--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -1,5 +1,4 @@
-<h3 class="headline"> <%= @vendor.name %> <br/>
-<small><%= @stadium.name %></small> </h3>
+<h3 class="headline"> <%= @owner.name %> <br/></h3>
 
 <%= form_for(@order) do |f| %>
   <% if @order.errors.any? %>
@@ -16,30 +15,39 @@
   <% end %>
 
   <%= f.hidden_field :user_id, :value => user_signed_in? ? current_user.id : 0 %>
-  <%= f.hidden_field :vendor_id, :value => @vendor.id %>
+  <%= @owner.instance_of?(Restaurant) ?  f.hidden_field(:restaurant_id, :value => @owner.id) : f.hidden_field(:vendor_id, :value => @owner.id) %>
   <%= f.hidden_field :amount, :value => "0" %>
-  <table cellspacing="10" class="table">
+  <div class ="panel panel-default">
+
+    <% @menu.categories.each do |category| %>
+      <div class="panel-heading"><h3 class="panel-title"><%= category.name %></h3></div>
+      <table cellspacing="10" class="table">
   
  
-  <% @vendor.menu.items.each do |item| %>
-    <tr class="menu_item" data-id="<%=item.id%>">
-      <td><%= item.name %></td>
-      <td id="<%=item.id%>_price" data-price="<%=item.price%>"><%= number_to_currency item.price %></td>
-      <td> 
-      <span class="glyphicon glyphicon-plus plus"></span>
- </td>
-      <td id="<%=item.id%>_num" class="num"> 0 </td>
-      <td> <span class="glyphicon glyphicon-minus minus"></span> </td>
-      <td class="item_id hidden"><%= item.id %></td>
+      <% category.items.each do |item| %>
+        <tr class="menu_item" data-id="<%=item.id%>">
+          <td><%= item.name %></td>
+          <td id="<%=item.id%>_price" data-price="<%=item.price%>"><%= number_to_currency item.price %></td>
+          <td> 
+          <span class="glyphicon glyphicon-plus plus"></span>
+          </td>
+          <td id="<%=item.id%>_num" class="num"> 0 </td>
+          <td> <span class="glyphicon glyphicon-minus minus"></span> </td>
+          <td class="item_id hidden"><%= item.id %></td>
 
-      <%= f.hidden_field "item[#{item.id}]", :value => 0, :class => "item_#{item.id}" %>
-  <% end %>
-    <tfoot>
-      <td>Total: </td>
-      <td></td>
-      <td class="total text-center" data-total="000" colspan="3"> $0.00</td>
-    </tfoot>
-  </table>
+          <%= f.hidden_field "item[#{item.id}]", :value => 0, :class => "item_#{item.id}" %>
+        </tr>
+      <% end %>
+      </table>
+    <% end %>
+
+    <table class="table">
+      <tr>
+        <td>Total: </td>
+        <td></td>
+        <td class="total text-center" data-total="000" colspan="3"> $0.00</td>
+    </table>
+  </div>
 
 
   <div class="actions">
