--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,4 +1,8 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Cancel', :controller => 'application' , :action => "select_vendor", :object_id  => @stadium.id %>
+<% if @owner.instance_of?(Vendor) %>
+	<%= link_to 'Cancel', :controller => 'application' , :action => "select_vendor", :object_id  => @owner.stadium.id %>
+<% else %>
+	<%= link_to 'Cancel', :controller => 'application', :action => "select_stadium" %>
+<% end %>
