--- a/app/views/receipt_mailer/receipt_email.html.erb
+++ b/app/views/receipt_mailer/receipt_email.html.erb
@@ -4,7 +4,8 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-<h4 class="text-center"> # <%= @order.id %> </h4>
+<h2 class="text-center"> # <%= @order.id %> </h2>
+<h3 class="text-center"> <%= @owner.name %> </h3>
 
   <table class="table">
     <thead>
