--- a/app/views/receipt_mailer/receipt_email.html.erb
+++ b/app/views/receipt_mailer/receipt_email.html.erb
@@ -24,6 +24,38 @@
     </tr>
     <% end %>
 
+    
+    <tfoot>
+      <% if @order.subtotal != @order.total %>
+        <tr>
+          <td>Subtotal</td>
+          <td></td>
+          <td></td>
+          <td> <%= integer_to_currency(@order.subtotal) %> </td>
+        </tr>
+        <tr>
+          <td>Tax</td>
+          <td></td>
+          <td></td>
+          <td> <%= integer_to_currency(@order.total-@order.subtotal) %></td>
+        </tr>
+        <tr>
+          <td>Total</td>
+          <td></td>
+          <td></td>
+          <td> <%= integer_to_currency(@order.total) %> </td>
+        </tr>
+      <% else %>
+        <tr>
+          <td>Total</td>
+          <td></td>
+          <td></td>
+          <td> <%= integer_to_currency(@order.total) %> </td>
+        </tr>
+      <% end %> 
+
+    </tfoot>
+
   </table>
 
 <h5 class="text-center"> Thank you for using Shnack! </h5>
