--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -48,4 +48,18 @@
 		<% end %>
 	</table>
 
-	Registration Code: <%= @restaurant.registration_code %> <%= link_to "Generate new code", new_registration_code_restaurant_path(@restaurant) %>
+	<ul class="list-group">
+		<li class="list-group-item">
+		Registration Code: <%= @restaurant.registration_code %> <%= link_to "Generate new code", new_registration_code_restaurant_path(@restaurant) %>
+		</li>
+		<li class="list-group-item">
+			Add Tax? - <%= @restaurant.add_tax %>
+		</li>
+
+		<li class="list-group-item">
+			Tax: <%= @restaurant.tax %>
+		</li>
+		<li class="list-group-item">
+			<%= link_to "Edit Restaurant", edit_restaurant_path(@restaurant) %>
+		</li>
+	</ul>
