--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
 
 
 			<div id="nav" class="col-md-3 col-md-push-4 col-md-offset-3"> 
-			  <%= link_to(image_tag("shnack_beta.png", :class => "logo img-responsive"), root_path)   %>
+			  <%= link_to(image_tag("shnack_beta3.png", :class => "logo img-responsive"), root_path)   %>
 			  <ul id="account-manage" class="nav nav-pills nav-stacked hidden-xs">
 			  <% if user_signed_in? %>
 				<li>
