texts should be fixed

--- a/app/views/receipt_mailer/receipt_email.html.erb
+++ b/app/views/receipt_mailer/receipt_email.html.erb
@@ -58,6 +58,6 @@
 
   </table>
 
-<h5 class="text-center"> Thank you for using Shnack! </h5>
+<h5 class="text-center"> Thank you for using Shnack! If you had any problems or would like to give us feedback, we'd love to hear what you have to say! E-mail us at contact@shnackapp.com </h5>
   </body>
 </html>
