--- a/app/assets/stylesheets/orders.css.scss
+++ b/app/assets/stylesheets/orders.css.scss
@@ -1,3 +1,10 @@
 // Place all the styles related to the Orders controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.subtotal {
+	background-color: rgb(245, 245, 245);
+	border-top-color: #DDD;
+	border-top-width: 1px;
+	border-top-style: solid;
+}
